solc_ossfuzz_seed_corpus/test_sol/test_765b215f80903574a73507a80cbe952b926bd50e5d5cb4722178ccfbc4904070_f9ec1205df520c7a9e88f1fdba6b8ef956c77aba_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(function () external i0,bytes30 i1)  returns(bool o0,bytes7 o1)
{


}
function f1()  returns(int136 o0)
{



}

==== Source: su1.sol ====
pragma abicoder v1;
pragma solidity >= 0.0.0;
import "su0.sol";

==== Source: su2.sol ====
contract C0 {
  function f2(int160 i0,int40 i1) external
  { }
  function f3(uint128 i0) external returns(address o0)
  {
{
}

this.f2(-252751058681287504714400395046522677741086553753,(-413510286980 / -459705611346));
  }
}
import "su0.sol";
function f4(bytes memory i0,bytes11 i1)  returns(bytes memory o0,C0 o1)
{

}
// ----
// TypeError 9553: (su2.sol:197-228): Invalid type for argument in function call. Invalid implicit conversion from rational_const 206755143490 / 229852805673 to int40 requested.
